<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/incident_bg">
        <LinearLayout
            android:id="@+id/ll_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/incident_bg"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/titleView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="Incident Details"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <LinearLayout
                    android:layout_marginLeft="20dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@mipmap/icon_type"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />
                    <TextView
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:text="@string/incident_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/sp_incident_type"
                    app:ms_arrow_tint="@color/white"
                    app:ms_background_color="@color/incident_border"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/incident_textcolor"
                    android:layout_width="match_parent"
                    android:textSize="18sp"
                    android:layout_height="50dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <LinearLayout
                    android:layout_marginLeft="20dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@mipmap/icon_type"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />
                    <TextView
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:text="@string/location_of_incident"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/sp_location"
                    app:ms_arrow_tint="@color/white"
                    app:ms_background_color="@color/incident_border"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/incident_textcolor"
                    android:layout_width="match_parent"
                    android:textSize="18sp"
                    android:layout_height="50dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <LinearLayout
                    android:layout_marginLeft="20dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@mipmap/icon_descri"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />
                    <TextView
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:text="@string/activation_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <TextView
                    android:gravity="center_vertical"
                    android:id="@+id/tv_act_update_POCName"
                    android:textColor="@color/incident_textcolor"
                    android:textSize="18sp"
                    android:paddingStart="20dp"
                    android:background="@drawable/incident_border"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <LinearLayout
                    android:layout_marginLeft="20dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@mipmap/icon_descri"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />
                    <TextView
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:text="@string/number_of_casualties"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <EditText
                    android:gravity="center_vertical"
                    android:id="@+id/tv_act_update_POCUnit"
                    android:textColor="@color/incident_textcolor"
                    android:textSize="18sp"
                    android:paddingStart="20dp"
                    android:background="@drawable/incident_border"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />
            </LinearLayout>



            <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <LinearLayout
                    android:layout_marginLeft="20dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@mipmap/icon_descri"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />
                    <TextView
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:text="@string/incident_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_descript"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:background="@drawable/incident_border"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp">
                    <EditText
                        android:paddingStart="20dp"
                        android:id="@+id/tv_act_update_incidentDetails"
                        android:hint="Description here..."
                        android:layout_margin="1dp"
                        style="@android:style/TextAppearance.Medium"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center_vertical"
                        android:imeOptions="actionDone"
                        android:background="@color/incident_border"
                        android:maxLength="140"
                        android:maxLines="10"
                        android:padding="2dp"
                        android:textColor="@color/incident_textcolor" />
                </LinearLayout>
            </LinearLayout>


            <Button
                android:layout_marginBottom="10dp"
                android:id="@+id/btn_update_incident"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="50dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:onClick="onClick"
                android:textSize="18sp"
                android:textColor="#2e5e76"
                android:background="@drawable/incident_confirm"
                android:text="Confirm" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>